# CppClinter

./: CMakeCache.txt  CMakeLists.txt  CppClinter  CppClinter.cbp  Makefile  README.md  cmake_install.cmake  code.c  out.c  readme.md  todo.md
src/: CAlphabet.cpp  CAlphabet.hpp  Lexeme.cpp  Lexeme.hpp  LexemeType.cpp  LexemeType.hpp  Lexer.cpp  Lexer.hpp  PrimeGC.hpp  SString.cpp  SString.hpp  Slice.hpp  Vector.hpp  accumulate.hpp  calphabet.cpp  calphabet.hpp  finders.cpp  finders.hpp  main.cpp  vector_test.cpp
src/Evaluator/: Evaluator.cpp  Evaluator.hpp  Token.cpp  Token.hpp  TokenType.cpp  TokenType.hpp  all.hpp  finders.cpp  finders.hpp
src/Evaluator/Error/: EvaluateException.cpp  EvaluateException.hpp
src/Lexer/: Lexeme.cpp  Lexeme.hpp  LexemeType.cpp  LexemeType.hpp  Lexer.cpp  Lexer.hpp  UndefinedLexemeException.cpp  UndefinedLexemeException.hpp  all.hpp  finders.cpp  finders.hpp
src/Linter/: Linter.cpp  Linter.hpp
src/Parser/: ParseFail.cpp  ParseFail.hpp  Parser.cpp  Parser.hpp
src/Statements/: Block.cpp  Block.hpp  Case.cpp  Case.hpp  Comment.cpp  Comment.hpp  ElseStatement.cpp  ElseStatement.hpp  Expression.cpp  Expression.hpp  IfElseStatement.cpp  IfElseStatement.hpp  IfStatement.cpp  IfStatement.hpp  Instruction.cpp  Instruction.hpp  LinterUndefinedException.cpp  LinterUndefinedException.hpp  Preprocessor.cpp  Preprocessor.hpp  Statement.cpp  Statement.hpp  StatementType.cpp  StatementType.hpp  Struct.cpp  Struct.hpp  Typedef.cpp  Typedef.hpp  UndefinedLinterError.cpp  UndefinedLinterError.hpp  UndefinedLinterException.cpp  UndefinedLinterException.hpp  all.cpp  all.hpp  allFinders.cpp  allFinders.hpp
src/Statements/Arithmetic/: UndefinedLinterError.cpp  UndefinedLinterError.hpp  findCompleteExpression.cpp  findCompleteExpression.hpp  linters.cpp  linters.hpp
src/util/: Slice.hpp  accumulate.hpp
